# Game-Recommendation-ML

./: .gitignore  README.md
server/: .env.example  Dockerfile  README.md  pyproject.toml
server/src/app/: __init__.py  main.py
server/src/app/_core/: config.py
server/src/app/db/: __init__.py  db.py
server/src/app/db/models/: Game.model.py  Game_model.py  User.model.py  UserGameInteraction.model.py  UserGameInteraction_model.py  User_model.py  __init__.py
server/src/app/ml/: __init__.py
server/src/app/ml/models/: __init__.py  embedding.py
server/src/app/utils/: logger.py
